--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body>
     <main class="container">
         <section class="wrap">
-            <div class="logo">
-                <a href=""><img src="./images/devbabu.png" alt="Devbabu.Com"></a>
-            </div>
+            <h1>Login</h1>
             <form action="" method="post" class="login-form">
                 <input type="email" name="email" placeholder="Email" required>
                 <input type="password" name="password" placeholder="Password" required>
